# monet

./: Cargo.toml  README.md
.github/workflows/: ci.yml
monet/: Cargo.toml
monet-derive/: Cargo.toml
monet-derive/src/: error.rs  lib.rs
monet-traits/: Cargo.toml
monet-traits/src/: lib.rs
monet/examples/: basic.rs  csv.rs  currencies.csv  currencies.toml  load_from_database.rs  simple_store_cart.rs  toml.rs
monet/src/: error.rs  lib.rs  money.rs  ops.rs
monet/tests/: define_currency.rs  derive_currency.rs
src/: currency.rs  lib.rs  ops.rs
