[package]
name = "monet-derive"
version = "0.1.0"
authors = ["Axel Montini <axel.montini@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[features]
default = ["csv"]

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
csv = { version = "1.1", optional = true }
thiserror = "1"
proc-macro2 = "1.0.8"