[package]
name = "monet"
version = "0.1.1"
authors = ["Axel <axel.montini@gmail.com>"]
edition = "2018"
description = "Handle currency conversion and common operations (additions, ...)"
repository = "https://github.com/AxelMontini/monet.git"
readme = "README.md"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
default = ["full"]

[features]
default = ["u128"]
serialize = ["serde"]
csv = ["monet-derive/csv"]
u128 = []
full = ["u128", "csv", "serialize"]

[dependencies]
serde = {version = "1.0.102", optional = true, features = ["derive"]}
thiserror = "1"
monet-derive = { path = "../monet-derive" }
monet-traits = { path = "../monet-traits" }